nginx-controller-cross-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypc-ingress-master
  namespace: ingress_ns
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mypc.com
    secretName: mypc-secret
  rules:
  - host: mypc.com

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypc-software-minion
  namespace: software_ns
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: mypc.com
    http:
      paths:
      - path: /software
        pathType: Prefix
        backend:
          service:
            name: software-svc
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypc-hardware-minion
  namespace: hardware_ns
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: mypc.com
    http:
      paths:
      - path: /hardware
        pathType: Prefix
        backend:
          service:
            name: hardware-svc
            port:
              number: 80
  ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-controller-namespace
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: nginx/nginx-ingress:latest
        args:
        - /nginx-ingress-controller
        - --ingress-class=nginx
        - --watch-namespace=your-specific-namespace  # Specify the namespace to watch
        # Other arguments and configurations for the NGINX Ingress Controller
